cluster/amybeta/cs-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meteor-cs
spec:
  type: ExternalName
  externalName: meteor.cs.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteor-cs-gateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/session-cookie-name: CROWDSRCSID
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/session-cookie-samesite: Strict
    nginx.ingress.kubernetes.io/session-cookie-max-age: "43200"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cs.uws.talkingpts.org
      secretName: cs-certificate
  rules:
    - host: cs.uws.talkingpts.org
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: meteor-cs
                port:
                  number: 3000
